--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^4.4.0"
   },
   "dependencies": {
-    "firebase": "^10.0.0"
+    "firebase": "^10.0.0",
+    "qrcode-generator": "^1.4.4"
   }
 }
