--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/object-hash": "^3.0.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.0"
   },
   "dependencies": {
     "firebase": "^10.0.0",
+    "object-hash": "^3.0.0",
     "qrcode-generator": "^1.4.4"
   }
 }
