--- a/new/package.json
+++ b/new/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "tsc && vite build && vite preview --host"
   },
   "dependencies": {
     "@preact/signals": "^1.2.3",
     "firebase": "^10.11.1",
     "goober": "^2.1.14",
-    "preact": "^10.19.6"
+    "preact": "^10.19.6",
+    "qrcode-generator": "^1.4.4"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.8.2",
